# fileclicker

./: README.md  setup.cfg
fileclicker/: __init__.py  file_finder.py  html_builder.py  justpy_with_browser.py  main.py
tests/: test_file_finder.py  test_pathlike_iter.py
