[metadata]
name = fileclicker
version = 0.1.0
description = Pickup files and urls to investigate them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/fileclicker
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
packages = find:
install_requires = 
  justpy
  pyqt5
  portpicker
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
    fileclicker = fileclicker:main
